# fwm

./: Cargo.toml  Trunk.toml  readme.md
.github/workflows/: pages.yml  rust.yml
fwm-as/: Cargo.toml
fwm-as-vmgen/: Cargo.toml
fwm-as-vmgen/src/: lib.rs  vmops.rs
fwm-as/src/: lex.rs  lib.rs  tree.rs  writer.rs
fwm-base/: Cargo.toml
fwm-base-proc-tolower/: Cargo.toml
fwm-base-proc-tolower/src/: lib.rs
fwm-base/src/: lib.rs  opcode.rs  parser.rs  runner.rs  vm.rs
fwm-web/: Cargo.toml  Dioxus.toml  index.html
fwm-web/src/: main.rs
fwm-web/src/components/: codebox.rs  inputbox.rs  mod.rs
fwmc/: Cargo.toml
fwmc/src/: main.rs
