[package]
name = "fwm-web"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = "0.3.2"
dioxus-web = "0.3.1"
web-sys = { version = "0.3.61", features = [ "Performance", "Window" ] }

fwm-base = { path = "../fwm-base" }
fwm-as = { path = "../fwm-as" }
fwm-as-vmgen = { path = "../fwm-as-vmgen", features = [ 'default-vm' ] }

