[package]
name = "fwmc"
description = "fwm portable assembler and virtual machine"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.2", features = [ "derive" ] }

fwm-base = { path = "../fwm-base" }
fwm-as = { path = "../fwm-as" }
fwm-as-vmgen = { path = "../fwm-as-vmgen", features = [ 'default-vm' ] }
